[package]
name = "monero-address-creator"
authors = ["The Tari Development Community"]
description = "A Monero address creator"
repository = "https://github.com/tari-project/tari"
version = "0.1.0"
edition = "2021"

[dependencies]
base58-monero = { version = "2.0.0", default-features = false }
curve25519-dalek = { version = "4.1.3" }
hex = "0.4.3"
sha3 = "0.10.8"
thiserror = "1.0.63"
rand = "0.8.5"